# mdstar

crates/mdstar-app/: Cargo.toml  tauri.conf.json
crates/mdstar-app/src/: gui.rs
crates/mdstar-app/ui/: index.html
macos/MarkwellQuickLook/: Info.plist  project.yml
macos/MarkwellQuickLook/Sources/: MarkdownRenderer.swift  PreviewProvider.swift
